Fixed date scenario